# fastecdsa

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  MANIFEST  MANIFEST.in  Makefile  README.md  README.rst  build_dist.sh  build_wheels.sh  curve.c  curve.h  curveMath.c  curveMath.h  fastecdsamodule.c  fastecdsamodule.h  pyproject.toml  setup.py  test.c  test.py  windows_make.cmd
.github/workflows/: build_wheels.yml  publish-to-prod.yaml  publish-to-test.yaml  pytest.yaml
docs/: .buildinfo  Makefile  conf.py  fastecdsa.html  fastecdsa.rst  genindex.html  index.html  index.rst  installation.html  installation.rst  modules.rst  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_sources/: installation.rst.txt
fastecdsa/: Curve.py  Point.py  asn1.py  benchmark.py  compat.py  curve.py  ecdsa.py  keys.py  point.py  test.py  typing.py  util.py
fastecdsa/encoding/: README.md  __init__.py  asn1.py  der.py  pem.py  rfc2459.py  rfc5480.py  rfc5915.py  sec1.py  util.py
fastecdsa/tests/: __init__.py  test_asn1.py  test_brainpool_ecdh.py  test_export_import.py  test_key_encoding.py  test_key_export_import.py  test_key_recovery.py  test_keygen.py  test_nonce_generation.py  test_p256_ecdsa.py  test_point.py  test_prehashed.py  test_prime_field_curve_math.py  test_rfc6979_ecdsa.py  test_signature_encoding.py  test_whitespace_parsing.py  test_whycheproof_vectors.py
fastecdsa/tests/encoding/: test_der.py  test_sec1.py
src/: Makefile  _ecdsa.c  _ecdsa.h  binaryField.c  binaryField.h  curve.c  curve.h  curveMath.c  curveMath.h  point.c  point.h  test.c
tests/: __init__.py  test_brainpool_ecdh.py  test_curve.py  test_key_export_import.py  test_key_recovery.py  test_keygen.py  test_nonce_generation.py  test_p256_ecdsa.py  test_point.py  test_prehashed.py  test_prime_field_curve_math.py  test_rfc6979_ecdsa.py  test_whitespace_parsing.py  test_whycheproof_vectors.py
tests/encoding/: test_asn1.py  test_sec1.py
tests/vectors/rfc6979/: P192.json  P224.json  P256.json  P384.json  P521.json
