[project]
name = "fastecdsa"
version = "2.3.1"
description = "Fast elliptic curve digital signatures"
readme = "README.rst"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "Anton Kueltz", email = "kueltz.anton@gmail.com"}
]
keywords = ["elliptic", "curve", "cryptography", "ecdsa", "ecc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security :: Cryptography",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux"
]

[project.urls]
repo = "https://github.com/AntonKueltz/fastecdsa"
docs = "https://fastecdsa.readthedocs.io"
pypi = "https://pypi.org/project/fastecdsa/"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ['fastecdsa*']
