[project]
name = "fastecdsa"
version = "3.0.1"
description = "Fast elliptic curve digital signatures"
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Anton Kueltz", email = "kueltz.anton@gmail.com"}
]
keywords = ["elliptic", "curve", "cryptography", "ecdsa", "ecc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security :: Cryptography",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux"
]

[project.urls]
repo = "https://github.com/AntonKueltz/fastecdsa"
docs = "https://fastecdsa.readthedocs.io"
pypi = "https://pypi.org/project/fastecdsa/"

[project.scripts]
benchmark = "fastecdsa.benchmark:run"

[build-system]
requires = ["setuptools>=75.6.0"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
omit = [
    "fastecdsa/benchmark.py",
    "fastecdsa/encoding/__init__.py"
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--cov=fastecdsa --cov-report=term-missing --cov-fail-under=95"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ['fastecdsa*']

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
    "setuptools>=75.6.0",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx>=7.4.7",
    "pytest-cov>=6.0.0",
]
